# regexer

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/tui/: template.tiny  tui.rs
docs/: language.md
regexer/: Cargo.toml
regexer/src/: lib.rs
regexer/src/lexer/: ast.rs  tokens.rs
regexer/src/transpiler/: regex.rs
src/: main.rs
src/lexer/: ast.rs  functions.rs  mod.rs  tokens.rs
src/tokenizer/: tokens.rs
src/transpiler/: regex.rs
