[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anathema = { git = "https://github.com/togglebyte/anathema.git", branch = "dev" }
anyhow = "1.0.77"
regexer = { path = "../regexer" }

[[bin]]
name = "rq"
path = "src/main.rs"
